# sha1collisiondetection

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  Makefile  Makefile.am  Makefile.old  README.md  SECURITY.md  configure.ac
.github/workflows/: codeql.yml
lib/: config.h  sha1.c  sha1.h  sha1_simd.cinc  sha1_simd_avx256.c  sha1_simd_mmx64.c  sha1_simd_neon128.c  sha1_simd_sse128.c  simd_avx256.h  simd_avx512.h  simd_mmx64.h  simd_neon128.h  simd_sse128.h  ubc_check.c  ubc_check.h  ubc_check_simd.cinc  ubc_check_simd_avx256.c  ubc_check_simd_avx512.c  ubc_check_simd_mmx64.c  ubc_check_simd_neon128.c  ubc_check_simd_sse128.c  ubc_check_verify.c
lib/simd/: sha1_simd.c  sha1_simd.cinc  sha1_simd.h  sha1_simd_avx256.c  sha1_simd_avx512.c  sha1_simd_mmx64.c  sha1_simd_neon128.c  sha1_simd_sse128.c  simd_avx256.h  simd_avx512.h  simd_config.h  simd_mmx64.h  simd_neon128.h  simd_sse128.h  simd_test.c  simd_test.cinc  ubc_check_simd.cinc  ubc_check_simd_avx256.c  ubc_check_simd_avx512.c  ubc_check_simd_mmx64.c  ubc_check_simd_neon128.c  ubc_check_simd_sse128.c
perf/: main.cpp  random_hashing.cpp  test_util_lib.h
src/: DV_data.txt  main.c  simd_table_gen.c
test/: test.sh
vs2015/sha1collisiondetection/: sha1collisiondetection.vcxproj
vs2015/sha1dcsum/: sha1dcsum.vcxproj
